# did-security-analysis

./: DID_Overview.pptx  README.html  README.md
Meeting Log/: Meeting_Log_201126.txt  Meeting_Log_201224.txt  Meeting_Log_201229.txt  Meeting_Log_201230.txt  Meeting_Log_210113.txt  Meeting_Log_210121.txt  Meeting_Log_210222.txt
Side Channel Attack/: cache.py  cache_timing.pptx
oblivira/app/: CMakeLists.txt  global_config.h
oblivira/app/enclave/: CMakeLists.txt  Enclave.cpp  Enclave.edl  Enclave_utils.cpp  Enclave_utils.h  enc.h  ssl_conn_hdlr.cpp  ssl_conn_hdlr.h
oblivira/app/enclave/PathORAM/: Block.hpp  Bucket.hpp  DID_Map.hpp  ORAMTree.cpp  ORAMTree.hpp  PathORAM.cpp  PathORAM.hpp  Stash.cpp  Stash.hpp  oram_utils.cpp  oram_utils.hpp
oblivira/app/enclave/ssl/: s_client.c
oblivira/app/include/: ssl_context.h
oblivira/app/untrusted/: CMakeLists.txt  LocalStorage.cpp  LocalStorage.hpp  oblivira.cpp  untrusted_utils.cpp  untrusted_utils.h
oblivira/doc/: Oblivira.drawio
